# web-server-iiw2019

./: CMakeLists.txt  byteFlowHanlder.c  byteFlowHanlder.h  const.h  errorHandler.c  errorHandler.h  httpHandler.c  httpHandler.h  main.c  main.h  utils.c  utils.h
cache/: cache.c  cache.h  image_mdf.c  image_mdf.h
deviceDetection/: 51DegreesWorker.c  51DegreesWorker.h  initi.c  initi.h  mbInfoStruct.h
log/: get_time.c  get_time.h  log.c  log.h
webfiles/: index.html  test.css.html
webfiles/test/: index.html
